codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_user_message_omits_unsupported_media.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "lines_to_single_string(&inserted[0])"
---
❯ Please inspect the attachments.
